# fsim

./: .gitignore  LICENSE  README.md  setup.cfg
fsim/: drift.py  theory.py  utils.py
fsim/sample/: control.txt
sample/: control.txt  test_out.txt
