[metadata]
name = fsim
version = attr: fsim.__version__
url = https://github.com/yamasampo/fsim
author = Division of Evolutionary Genetics in NIG
author_email = hyamashita@nig.ac.jp
license_file = LICENSE
description = fsim: perform forward simulation of mutant allele frequency over generations. 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires = numpy
